# folio

./: CHANGELOG.md  checksum-Elixir.Folio.Native.exs  mix.exs
.github/workflows/: release.yml
native/folio_nif/: Cargo.toml
native/folio_nif/src/: convert.rs  world.rs
test/: folio_test.exs
