[package]
name = "folio_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "folio_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37"
typst = { path = "../../vendor/typst/crates/typst" }
typst-library = { path = "../../vendor/typst/crates/typst-library" }
typst-layout = { path = "../../vendor/typst/crates/typst-layout" }
typst-pdf = { path = "../../vendor/typst/crates/typst-pdf" }
typst-svg = { path = "../../vendor/typst/crates/typst-svg" }
typst-render = { path = "../../vendor/typst/crates/typst-render" }
typst-syntax = { path = "../../vendor/typst/crates/typst-syntax" }
typst-eval = { path = "../../vendor/typst/crates/typst-eval" }
typst-assets = { git = "https://github.com/typst/typst-assets", rev = "57a38ca", features = ["fonts"] }
comrak = { version = "0.52", default-features = false }
ecow = "0.2"
hayagriva = "0.9.1"
smallvec = { version = "1.11", features = ["union", "const_generics", "const_new"] }
typed-arena = "2.0"
fontdb = "0.23"

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
